--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==1.3.1
-scipy==1.6.2
-streamlit==1.12.2
+#pandas==1.3.1
+#scipy==1.6.2
+#streamlit==1.12.2
 altair==5.3.0
 attrs==23.2.0
 blinker==1.8.2
